Update covid guidelines

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dental Care, Clonmel, Co. Tipperary, specialise in a wide range of dental treatment including implants, teeth bleaching, crown / bridge &amp; venner work.">
+    <meta name="description"
+        content="Dental Care, Clonmel, Co. Tipperary, specialise in a wide range of dental treatment including implants, teeth bleaching, crown / bridge &amp; venner work.">
     <meta name="author" content="The Dental Surgery">
     <title>Gerry Kaar - Dental Surgeon and Associates | Home</title>
     <link rel="icon" type="image/favicon" href="images/favicon.ico" />
@@ -19,6 +21,7 @@
     <link href="css/carousel-base.css" rel="stylesheet">
     <link href="css/dentistkaarstyle.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="navbar-wrapper">
         <div class="container header">
@@ -41,7 +44,8 @@
             <div class="navbar navbar-default" role="navigation">
                 <div id="index-nav" class="container">
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse"
+                            data-target=".navbar-collapse">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -94,15 +98,16 @@
                         <p><a class="btn btn-lg btn-primary" href="about.html" role="button">Find Out More</a></p>
                     </div>
                 </div>
-            </div>            
+            </div>
             <div class="item">
                 <img src="images/practice.png" alt="Dental Pracice">
                 <div class="container">
                     <div class="carousel-caption">
-                        <img src="images/ida-logo-2017.png" width="150" height="150" title="Irish Dental Association Member" />
+                        <img src="images/ida-logo-2017.png" width="150" height="150"
+                            title="Irish Dental Association Member" />
                         <br /><br />
-                        <p>Irish Dental Association Member</p>                        
-                    </div>                    
+                        <p>Irish Dental Association Member</p>
+                    </div>
                 </div>
             </div>
             <div class="item">
@@ -111,59 +116,60 @@
                     <div class="carousel-caption">
                         <h1>Mouth Cancer Awareness Day</h1>
                         <p>We are participating in the Mouth Cancer Awareness Day in September.</p>
-                        <p><a class="btn btn-lg btn-primary" href="oralcancerawareness.html" role="button">Find Out More</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="oralcancerawareness.html" role="button">Find Out
+                                More</a></p>
                     </div>
                 </div>
-            </div>            
+            </div>
             <div class="item">
                 <img src="images/practice.png" alt="Dental Pracice">
                 <div class="container">
-                    <div class="carousel-caption">                        
+                    <div class="carousel-caption">
                         <h1>New! Clinical Denture Service</h1>
-                        <p>Our new clinical dental technician is available for all your denture needs every<br />Friday from 10am - 1pm</p>
+                        <p>Our new clinical dental technician is available for all your denture needs every<br />Friday
+                            from 10am - 1pm</p>
                         <br /><br />
                     </div>
                 </div>
             </div>
         </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span
+                class="glyphicon glyphicon-chevron-left"></span></a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span
+                class="glyphicon glyphicon-chevron-right"></span></a>
     </div><!-- /.carousel -->
     <div class="container">
         <div class="col-lg-8 col-lg-offset-2 text-justify">
-            <h2 class="text-center">Covid-19 Update June 2020</h2>
+            <h2 class="text-center">Covid-19 Update November 2020</h2>
             <p>I hope you and your families are keeping well and safe during these uncertain times.</p>
-            <p>Following the advice from The Dental Council and The Irish Dental Association I
-                would like to inform you that since March I have provided emergency dental
-                care and have also been providing support and advice for all patients via
-                telephone. The government roadmap to reopening businesses in collaboration
-                with the dental advisory groups has recently outlined a change in the
-                treatment we can now undertake. Dental Surgeons can now provide routine
-                dental treatment and I am currently focused on working through a backlog of
-                restoration work and providing an environment that mitigates infection risk.</p>
-            <p>I want to make sure your visit to the surgery is a comfortable and pleasant
-                experience, and your satisfaction and well-being is of utmost importance to
-                me. Drills and other high-speed tools create a lot of ‘spray’ from patients’
-                mouths so dentists now need to use protective clothing and equipment.
-                Without this equipment, dentists, hygienists and nurses are not safe to treat
-                patients as normal.</p>
-            <p>Our dedicated team are on hand to provide you with all the support and
-                guidance we possibly can. Your care remains our top priority and we look
-                forward to seeing you back in practice as soon as we can.</p>
+            <p>Following the advice from The Dental Council and The Irish Dental Association, Dental Surgeons can now
+                provide dental treatment in an environment that mitigates infection risk.</p>
+            <p>I want to make sure your visit to the surgery is a comfortable and pleasant experience, and your
+                satisfaction and well-being is of utmost importance to me. Drills and other high-speed tools create a
+                lot of '<i>spray</i>' from patients' mouths so members of the dental team now need to use protective clothing
+                and equipment. This PPE reduces the risk of infection for patients and the dental team.
+            </p>
+            <p>Our dedicated team are on hand to provide you with all the support and guidance we possibly can. Your
+                care remains our top priority and we look forward to seeing you back in practice as soon as we can.
+            </p>
             <p>Best wishes,</p>
             <p>Gerry Kaar</p>
         </div>
         <div class="col-lg-8 col-lg-offset-2 text-justify">
             <h2 class="text-center">We are thinking about your safety</h2>
-            <p>We are reducing the number of our daily appointments to restrict patient
-                numbers on the premises. Please come on time but not too early. Ring the
-                surgery on 0526121784 and if the phone is unanswered please leave a
-                message to say you are waiting outside the surgery.</p>
-            <p>We are operating a low contact level for all our patients. The surgery as always
-                will be disinfected between patients and ventilated.</p>
-            <p>Please advise us about any change in medication before you attend and we will
-                ask you to fill in any forms required before you attend your appointment.</p>
-            <p>We have made changes at the surgery to focus on mitigating infection risks.</p>
+            <p>We are reducing the number of our daily appointments to restrict patient numbers on the premises. Please
+                come on time, but not too early. Ring the surgery on <b>052 612 1784</b> and if the phone is unanswered please
+                leave a message to say you are waiting outside the surgery. You can also send us a text message using <i>WhatsApp</i>
+                to <b>085 774 3239</b> to say you are at the surgery.
+            </p>
+            <p>We are operating a low contact level for all our patients. The surgery, as always will be disinfected
+                between patients and ventilated.
+            </p>
+            <p>Please advise us about any change in medication before you attend and we will ask you to fill in any
+                forms required before you attend your appointment.
+            </p>
+            <p>We have made these changes at the surgery to focus on mitigating infection risks.
+            </p>
         </div>
     </div>
     <hr />
@@ -172,28 +178,39 @@
             <div class="col-lg-4">
                 <span style="font-size: 10em" class="glyphicon glyphicon-heart"></span>
                 <h2>Our Commitment</h2>
-                <p class="sub-heading-text">We are committed to providing the best quality dental healthcare available, consistently and in an environment of mutual respect for both patients and staff through effective teamwork.</p>
-                <p class="sub-heading-text">We are committed to carrying out all activities under the umbrella of recommended best practice with the resources available.</p>
+                <p class="sub-heading-text">We are committed to providing the best quality dental healthcare available,
+                    consistently and in an environment of mutual respect for both patients and staff through effective
+                    teamwork.</p>
+                <p class="sub-heading-text">We are committed to carrying out all activities under the umbrella of
+                    recommended best practice with the resources available.</p>
                 <p><a class="btn btn-default" href="about.html" role="button">About Us &raquo;</a></p>
             </div>
             <div class="col-lg-4">
                 <span style="font-size: 10em" class="glyphicon glyphicon-time"></span>
                 <h2>Opening Hours</h2>
                 <ul class="list-group" id="OpeningDays">
-                    <li class="list-group-item"><span class="opening-day">Sunday and bank holiday weekends</span> CLOSED</li>
+                    <li class="list-group-item"><span class="opening-day">Sunday and bank holiday weekends</span> CLOSED
+                    </li>
                     <li class="list-group-item"><span class="opening-day">Monday</span> 9:00 - 13:00, 14:00 - 18:00</li>
-                    <li class="list-group-item"><span class="opening-day">Tuesday</span> 9:00 - 13:00, 14:00 - 18:00</li>
-                    <li class="list-group-item"><span class="opening-day">Wednesday</span> 9:00 - 13:00, 14:00 - 18:00</li>
-                    <li class="list-group-item"><span class="opening-day">Thursday</span> 9:00 - 13:00, 14:00 - 18:00</li>
+                    <li class="list-group-item"><span class="opening-day">Tuesday</span> 9:00 - 13:00, 14:00 - 18:00
+                    </li>
+                    <li class="list-group-item"><span class="opening-day">Wednesday</span> 9:00 - 13:00, 14:00 - 18:00
+                    </li>
+                    <li class="list-group-item"><span class="opening-day">Thursday</span> 9:00 - 13:00, 14:00 - 18:00
+                    </li>
                     <li class="list-group-item"><span class="opening-day">Friday</span> 9:00 - 13:00, 14:00 - 18:00</li>
-                    <li class="list-group-item"><span class="opening-day">Saturday</span> 9:00 - 13:00<br /><i>By appointment only</i></li>
+                    <li class="list-group-item"><span class="opening-day">Saturday</span> 9:00 - 13:00<br /><i>By
+                            appointment only</i></li>
                 </ul>
                 <p><a class="btn btn-default" href="contact.html" role="button">Contact &raquo;</a></p>
             </div>
             <div class="col-lg-4">
                 <span style="font-size: 10em" class="glyphicon glyphicon-map-marker"></span>
                 <h2>Directions</h2>
-                <p class="sub-heading-text">Coming from the Cahir Road, go straight through the roundabout on the Western Road at The Western Medical Centre and Pharmacy, pass the South Tipperary General Hospital on the left. The Dental Practice is 200 metres further on the right before the traffic lights at the shop. Parking in front of building for patients.</p>
+                <p class="sub-heading-text">Coming from the Cahir Road, go straight through the roundabout on the
+                    Western Road at The Western Medical Centre and Pharmacy, pass the South Tipperary General Hospital
+                    on the left. The Dental Practice is 200 metres further on the right before the traffic lights at the
+                    shop. Parking in front of building for patients.</p>
                 <p><a class="btn btn-default" href="findus.html" role="button">Find Us &raquo;</a></p>
             </div>
         </div>
@@ -207,7 +224,8 @@
                 <img src="images/ida-logo.png" width="137" height="70" title="IDA logo" />
             </a>
             <a href="https://facebook.com/169884199694878" title="Find us on Facebook" target="_blank">
-                <img src="images/FB-FindUsonFacebook-online-144.png" width="144" height="27" title="Find us on Facebook" />
+                <img src="images/FB-FindUsonFacebook-online-144.png" width="144" height="27"
+                    title="Find us on Facebook" />
             </a>
         </footer>
     </div>
@@ -216,12 +234,14 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h3 class="modal-title">Welcome to Western Dental</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h3 class="modal-title">Welcome to Western Dental</h3>
                 </div>
                 <div class="modal-body">
                     <p>Please be advised that this is a private dental surgery.</p>
-                    <p>The public HSE dental clinic can be found at <strong>Clonmel Community Care Centre</strong><br />in the grounds of the South Tipperary General Hospital.</p>
+                    <p>The public HSE dental clinic can be found at <strong>Clonmel Community Care
+                            Centre</strong><br />in the grounds of the South Tipperary General Hospital.</p>
                 </div>
             </div>
         </div>
@@ -258,10 +278,10 @@
             $(".this-year").html(new Date().getFullYear());
 
             // show the notification pop-up if this is the first time on the website.
-            if(typeof Cookies.get('notification') == 'undefined') {
-                $("#NotificationModal").modal();                
+            if (typeof Cookies.get('notification') == 'undefined') {
+                $("#NotificationModal").modal();
                 Cookies.set('notification', 1, { expires: 365 });
-            }            
+            }
         });
     </script>
     <script type="text/javascript">
@@ -269,11 +289,12 @@
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-18019923-1', 'auto');
         ga('send', 'pageview');
     </script>
 </body>
+
 </html>
