Update prices for September 2022

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
 					<li class="list-group-item"><span class="opening-day">Wednesday</span> 9:00 - 13:00, 14:00 - 18:00</li>
 					<li class="list-group-item"><span class="opening-day">Thursday</span> 9:00 - 13:00, 14:00 - 18:00</li>
 					<li class="list-group-item"><span class="opening-day">Friday</span> 9:00 - 13:00, 14:00 - 18:00</li>
-					<li class="list-group-item"><span class="opening-day">Saturday</span> 9:00 - 13:00<br /><i>By appointment only</i></li>
+					<li class="list-group-item"><span class="opening-day">Saturday</span> 9:00 - 13:00<br /><i>By appointment only, once a month. Please contact the surgery</i></li>
 				  </ul>				  
 			</div>
 		</div>
