--- a/privatefees.html
+++ b/privatefees.html
@@ -105,7 +105,7 @@
 				</tr>
 				<tr>
 					<td>Recall scale and polish per visit (if a second or more visit is required in the same course of treatment)</td>
-					<td>&euro;30.00</td>
+					<td>&euro;40.00</td>
 				</tr>
 				<tr>
 					<td>Root scaling</td>
@@ -149,7 +149,7 @@
 				</tr>
 				<tr>
 					<td>Surgical extraction in case of complicated extraction.</td>
-					<td>&euro;120.00 </td>
+					<td>&euro;120.00 - &euro;150.00 (time based)</td>
 				</tr>
 				<tr>
 					<td>Surgical extraction of impacted tooth e.g. Wisdom tooth</td>
@@ -159,7 +159,7 @@
 				<tr>
 					<td rowspan="6" valign="top">Fillings (the cost of the filling is determined by the number of tooth surfaces that need to be filled)</td>
 					<td>Amalgam - Simple </td>
-					<td>&euro;80.00</td>
+					<td>&euro;90.00</td>
 				</tr>
 				<tr>
 					<td>Amalgam - Complicated </td>
@@ -211,55 +211,11 @@
 					<td>Crown lengthening for crown </td>
 					<td>Price on application </td>
 				</tr>
-				<!-- ***** Dentures ***** -->
-				<tr>
-					<td rowspan="5" valign="top">Dentures <span class="asterisk">****</span></td>
-					<td>Acrylic - Full upper and lower dentures </td>
-					<td>&euro;800.00</td>
-				</tr>
-				<tr>
-					<td>Acrylic - Full upper or lower denture </td>
-					<td>&euro;450.00 </td>
-				</tr>
-				<tr>
-					<td>Acrylic - Part dentures </td>
-					<td>From &euro;350.00 </td>
-				</tr>
-				<tr>
-					<td>Metal Cobalt/Chrome Dentures </td>
-					<td>&euro;850.00 </td>
-				</tr>
-				<tr>
-					<td>Temporary Denture </td>
-					<td>min &euro;200.00 </td>
-				</tr>
 				<!-- ***** Tooth Whitening ***** -->
 				<tr>
 					<td rowspan="1" valign="top">Tooth Whitening</td>
 					<td>Tray System</td>
 					<td>&euro;250.00</td>
-				</tr>
-				<!-- ***** Implants ***** -->
-				<tr>
-					<td rowspan="5" valign="top">Implants</td>
-					<td>Consultation </td>
-					<td>&euro;50.00</td>
-				</tr>
-				<tr>
-					<td>Diagnostic procedure including Study Models, Articulation, Wax-up </td>
-					<td>&euro;125.00 </td>
-				</tr>
-				<tr>
-					<td>Per tooth, restored including the crown (prepared abutment) </td>
-					<td>Price on application </td>
-				</tr>
-				<tr>
-					<td>Over denture (2 ball attachments) </td>
-					<td>Price on application </td>
-				</tr>
-				<tr>
-					<td>Bone augmentation procedures </td>
-					<td>Price on application </td>
 				</tr>
 				<!-- ***** Crown/Bridge ***** -->
 				<tr>
@@ -327,15 +283,15 @@
 				</tr>
 				<tr>
 					<td>Recement Crown/Bridge </td>
-					<td>&euro;50.00 </td>
+					<td>&euro;60.00 </td>
 				</tr>
 				<tr>
 					<td>Recement Crown/Bridge that requires a new post </td>
-					<td>&euro;90.00 </td>
+					<td>&euro;100.00 </td>
 				</tr>
 				<tr>
 					<td>Consultation with opening of the Root Canal and prescription </td>
-					<td>&euro;60.00 </td>
+					<td>&euro;90.00 </td>
 				</tr>
 				<tr>
 					<td>Trauma Splint AE Composite </td>
@@ -343,21 +299,7 @@
 				</tr>
 				<tr>
 					<td>Temporary Crown </td>
-					<td>&euro;70.00 </td>
-				</tr>
-				<!-- ***** Orthodontics ***** -->
-				<tr>
-					<td rowspan="3" valign="top">Orthodontics</td>
-					<td>Fixed Appliance Therapy </td>
-					<td>Price on application </td>
-				</tr>
-				<tr>
-					<td>Removable Appliance Therapy </td>
-					<td>&euro;700.00 plus &euro;20.00 per review/check visit </td>
-				</tr>
-				<tr>
-					<td>Replacement Appliance due to loss or damage </td>
-					<td>&euro;180.00 </td>
+					<td>&euro;90.00 </td>
 				</tr>
 			  <tbody>
 			</table>	  
@@ -369,7 +311,6 @@
 				<p><span class="asterisk">*</span> Hygienist - All fees inclusive of oral Hygiene instructions.</p>
 				<p><span class="asterisk">**</span> Hygienist (examination) - If scaling and polishing is requested the fee will be charged as per hygienist visit.</p>
 				<p><span class="asterisk">***</span> Root Canal Treatment (per canal) - There is an additional cost to restore the crown of the tooth. (&euro;100+)</p>
-				<p><span class="asterisk">****</span> Dentures - Immediate Dentures are charged as above plus the cost of the extractions.</p>
 		  </div>
 		</div>
 	</div>
