--- a/about.html
+++ b/about.html
@@ -72,11 +72,7 @@
         <div class="panel panel-primary">
             <div class="panel-heading"><b>Gerry Kaar</b> Principal Dental Surgeon</div>
             <div class="panel-body">
-                <p>Qualified in 1979 in UCC.</p>
-                After working in London and the UK, he returned to Clonmel in 1989 to take over The Dental Surgery.
-                He has recently been awarded the Certificate in Implant Dentistry from Warwick University.
-                During the time spent in Clonmel, he has completed the diploma in Clinical Dentistry in UCD, and has
-                also obtained a law degree (LLB, University of London).
+                Retired on medical grounds.
             </div>
         </div>
         <div class="panel panel-default">
@@ -106,7 +102,7 @@
             </div>
         </div>
         <div class="panel panel-default">
-            <div class="panel-heading"><b>Agnieszka Ormanowska</b> Dental Surgery Assistant</div>
+            <div class="panel-heading"><b>Agnieszka Ormanowska</b> Dental Surgery Assistant and Acting Practice Manager</div>
             <div class="panel-body">
                 Agnieszka Ormanowska, is our qualified dental nurse and is a most valued member of staff.
                 Agnieszka has been with the practice for nearly ten years. She is extremely capable and competent and
@@ -115,23 +111,10 @@
             </div>
         </div>
         <div class="panel panel-default">
-            <div class="panel-heading"><b>Claire Coleman</b>, Clinical Dental Technician</div>
+            <div class="panel-heading"><b>Siobhan Berrigan</b>, Dental Surgery Assistant</div>
             <div class="panel-body">
-                Claire is a registered dental care professional who is trained and qualified to provide a range of
-                denture services directly to patients and services that were previously only available through your
-                dentist.<br /><br />
-                Claire graduated with a degree in Dental Technology in 1998 from Manchester Metropolitan University.
-                After two years working in the Manchester Dental Hospital she moved to Ireland to join her family run
-                dental laboratory in Waterford. During this time she returned to college to gain a Post Graduate Diploma
-                in Clinical Dental Technology at the Dublin Dental Hospital. Claire now specialises in dentures; seeing
-                the patient through from treatment planning to fitting the denture and offering a personalised service.
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading"><b>Valerie Hayes</b>, Dental Surgery Assistant</div>
-            <div class="panel-body">
-                Valerie is a qualified dental nurse and has recently joined our dental team. She is looking forward to
-                working with Connor and helping him with patient care.
+                Siobhan is a qualified and very experienced dental nurse who has recently joined our dental team. Her friendly personality 
+                will put patients at ease and she is looking forward to working with Connor and helping him with patient care.
             </div>
         </div>
     </div>
