--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
                 <img src="images/practice.png" alt="Dental Pracice">
                 <div class="container">
                     <div class="carousel-caption">
+                        <h1>Christmas 2022 Opening Hours</h1>
+                        <p>Open all week in the run up to Christmas, finishing on Friday 23rd at 5pm</p>
+                        <p>Open 28th, 29th and 30th December</p>
+                        <p>Returning Tuesday 3rd of January</p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/practice.png" alt="Dental Pracice">
+                <div class="container">
+                    <div class="carousel-caption">
                         <h1>Welcome to the Dental Surgery</h1>
                         <p>We are currently celebrating our <span id="celebrating">28th</span> year at the practice!</p>
                         <p><a class="btn btn-lg btn-primary" href="findus.html" role="button">Find Us</a></p>
@@ -121,17 +132,6 @@
                     </div>
                 </div>
             </div>
-            <div class="item">
-                <img src="images/practice.png" alt="Dental Pracice">
-                <div class="container">
-                    <div class="carousel-caption">
-                        <h1>New! Clinical Denture Service</h1>
-                        <p>Our new clinical dental technician is available for all your denture needs every<br />Friday
-                            from 10am - 1pm</p>
-                        <br /><br />
-                    </div>
-                </div>
-            </div>
         </div>
         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span
                 class="glyphicon glyphicon-chevron-left"></span></a>
@@ -140,7 +140,17 @@
     </div><!-- /.carousel -->
     <div class="container">
         <div class="col-lg-8 col-lg-offset-2 text-justify">
-            <h2 class="text-center">Covid-19 Update November 2020</h2>
+            <h2 class="text-center">Open Letter Update</h2>
+            <p>I would to say <i>"Thank You"</i> for your loyalty and support to Dee, my staff and myself over the last 33 years at Western Dental Surgery.</p>
+            <p>It is with regret that I must tell you that I am no longer able to practice due to ill health.</p>
+            <p>Doctor Connor Slattery has been working at Western Dental for the past two years and he will be pleased to look after your dental care, if you wish.</p>
+            <p>With every best wish for the future and thank you again for your kind support.</p>
+            <br />
+            <p>Yours sincerely,</p>
+            <p>Gerry Kaar</p>
+        </div>
+        <div class="col-lg-8 col-lg-offset-2 text-justify">
+            <h2 class="text-center">Covid-19 Safety Guidelines</h2>
             <p>I hope you and your families are keeping well and safe during these uncertain times.</p>
             <p>Following the advice from The Dental Council and The Irish Dental Association, Dental Surgeons can now
                 provide dental treatment in an environment that mitigates infection risk.</p>
