Update opening hours to closed on Saturday

--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
                     <li class="list-group-item"><span class="opening-day">Thursday</span> 9:00 - 13:00, 14:00 - 18:00
                     </li>
                     <li class="list-group-item"><span class="opening-day">Friday</span> 9:00 - 13:00, 14:00 - 18:00</li>
-                    <li class="list-group-item"><span class="opening-day">Saturday</span> 9:00 - 13:00<br /><i>By
-                            appointment only</i></li>
+                    <li class="list-group-item"><span class="opening-day">Saturday</span> CLOSED</li>
                 </ul>
                 <p><a class="btn btn-default" href="contact.html" role="button">Contact &raquo;</a></p>
             </div>
